--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 @import '@mantine/core/styles.css';
 @import '@mantine/code-highlight/styles.css';
+@import '@mantine/notifications/styles.css';
 
 @tailwind base;
 @tailwind components;
